@@ -1608,16 +1608,39 @@ doesn't support to use the receiver cairo target as the source. */
           double green;
           double blue;
           double alpha;
-          
+          NSString *colorSpaceName;
+	  
           [gradient getColor: &color
                     location: &location
                      atIndex: i];
-          red = [color redComponent];
-          green = [color greenComponent];
-          blue = [color blueComponent];
-          alpha = [color alphaComponent];
-          cairo_pattern_add_color_stop_rgba(cpattern, location,
-                                            red, green, blue, alpha);
+
+	  colorSpaceName = [color colorSpaceName];
+	  if([NSCalibratedRGBColorSpace isEqualToString: colorSpaceName] ||
+	     [NSDeviceRGBColorSpace isEqualToString: colorSpaceName])
+	    {
+	      red = [color redComponent];
+	      green = [color greenComponent];
+	      blue = [color blueComponent];
+	      alpha = [color alphaComponent];
+	      cairo_pattern_add_color_stop_rgba(cpattern, location,
+						red, green, blue, alpha);
+	    }
+	  else if([NSCalibratedWhiteColorSpace isEqualToString: colorSpaceName] ||
+		  [NSDeviceWhiteColorSpace isEqualToString: colorSpaceName] ||
+		  [NSCalibratedBlackColorSpace isEqualToString: colorSpaceName] ||
+		  [NSDeviceBlackColorSpace isEqualToString: colorSpaceName])
+	    {
+	      red = [color whiteComponent];
+	      green = [color whiteComponent];
+	      blue = [color whiteComponent];
+	      alpha = [color alphaComponent];
+	      cairo_pattern_add_color_stop_rgba(cpattern, location,
+						red, green, blue, alpha);
+	    }
+	  else
+	    {
+	      NSLog(@"Cannot draw gradient for %@",colorSpaceName); 
+	    }
         }
       
       cairo_save(_ct);
